...
                        .autocapitalization(.none)
                        .disableAutocorrection(true)
                        .padding()
                        .background(Color.white) // Fondo blanco para diferenciarlo.
                        .cornerRadius(8)
                        .shadow(color: .gray.opacity(0.3), radius: 4, x: 0, y: 2) // Sombra para destacar.
                        .accessibilityIdentifier("emailTextField")

                    // Campo de contraseña.
                    SecureField("Contraseña", text: $contrasena)
                        .padding()
                        .background(Color.white) // Fondo blanco para diferenciarlo.
                        .cornerRadius(8)
                        .shadow(color: .gray.opacity(0.3), radius: 4, x: 0, y: 2) // Sombra para destacar.
                        .accessibilityIdentifier("passwordSecureField")
                }
                .padding(.horizontal)

                // Botón para iniciar sesión.
                Button(action: authenticateUser) {
                    Text("Iniciar Sesión")
...
                        .frame(maxWidth: .infinity) // Ocupa todo el ancho disponible.
                        .background(Color(hex: "#7BB2E0")) // Fondo azul claro.
                        .cornerRadius(8) // Bordes redondeados.
                        .shadow(color: .gray.opacity(0.4), radius: 5, x: 0, y: 3) // Sombra para destacar.
                }
                .padding(.horizontal)
                .accessibilityIdentifier("loginButton")

                Spacer()

                // Iconos de redes sociales.
                HStack(spacing: 20) {
                    SocialMediaIcon(imageName: "facebookIcon", url: facebookURL)
...
                    hideKeyboard() // Oculta el teclado al tocar cualquier parte de la vista.
                }
            }
            .padding()
            .alert(isPresented: $showAlert) {
                Alert(
                    title: Text("Error"),
                    message: Text(alertMessage),
                    dismissButton: .default(Text("OK"))
                )
            }
        }
        .scrollDismissesKeyboard(.interactively)
    }

...
