...
            VStack {
                // Encabezado de bienvenida.
                Text("¡Hola, \(admin.nombre ?? "Administrador")!")
                    .font(.largeTitle) // Aplica un estilo de título grande.
                    .bold() // Destaca el texto con negrita.
                    .padding() // Espaciado adicional alrededor del texto.
                    .accessibilityIdentifier("adminProfileGreeting") // Identificador para pruebas de accesibilidad.

                // Opciones principales organizadas en una cuadrícula flexible.
                LazyVGrid(columns: [GridItem(.flexible()), GridItem(.flexible())], spacing: 5) {
                    // Cada tarjeta representa una funcionalidad principal del administrador.

                    // Opción para administrar aulas.
                    SmallOptionCardView(imageName: "aulaIcon", title: "Administrar Aulas") {
                        navigationPath.append("AdminAulasListView")
                    }
                    .accessibilityIdentifier("adminAulasOption")

                    // Opción para administrar usuarios.
                    SmallOptionCardView(imageName: "userIcon", title: "Administrar Usuarios") {
                        navigationPath.append("AdminUsersListView")
                    }
                    .accessibilityIdentifier("adminUsersOption")

                    // Opción para administrar centros educativos.
                    SmallOptionCardView(imageName: "centroIcon", title: "Gestionar Centros") {
                        navigationPath.append("AdminCentrosListView")
                    }
                    .accessibilityIdentifier("adminCentrosOption")
...
                    .accessibilityIdentifier("adminMenusOption")

                    // Opción para gestionar noticias.
                    SmallOptionCardView(imageName: "newsIcon", title: "Gestionar Noticias") {
                        navigationPath.append("AdminNoticiasView")
                    }
                    .accessibilityIdentifier("adminNoticiasOptionCard")
                }
                .padding() // Espaciado adicional alrededor del grid.
                .accessibilityIdentifier("adminOptionsGrid") // Identificador para la cuadrícula de opciones.

                Spacer() // Agrega espacio flexible entre las opciones y la barra inferior.

...
